<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"    >

    <EditText
        android:id="@+id/signup_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_input_hint"></EditText>

    <EditText
        android:id="@+id/signup_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/signup_confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/confirm_password_input_hint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/signup_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_input_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signup_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_input_hint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/upload_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/upload_profile_pic" />

    <Button
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/account_button_label" />

</LinearLayout>