<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton_back"
        android:minHeight="40dp"
        android:maxWidth="40dp"
        android:minWidth="40dp"
        android:maxHeight="40dp"
        android:src="@drawable/ic_action_dashboard" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:id="@+id/imageView5"
        android:minHeight="400dp"
        android:minWidth="400dp"
        android:nestedScrollingEnabled="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:maxWidth="400dp"
        android:maxHeight="400dp"
        android:layout_below="@id/imageButton_back"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SeekBar_brightness"
        android:minWidth="300dp"
        android:focusableInTouchMode="false"
        android:layout_below="@+id/imageView5"
        android:layout_alignLeft="@+id/SeekBar_contrast"
        android:layout_alignStart="@+id/SeekBar_contrast" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SeekBar_contrast"
        android:minWidth="300dp"
        android:layout_below="@+id/SeekBar_brightness"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView2"
        android:layout_below="@+id/SeekBar_brightness"
        android:layout_centerHorizontal="true"
        android:text="@string/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView3"
        android:id="@+id/textView3"
        android:layout_below="@+id/SeekBar_contrast"
        android:layout_centerHorizontal="true" />

</RelativeLayout>